// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox > should render 1`] = `
<div>
  <input
    class="css-kf7z38"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox > should render a danger color 1`] = `
<div>
  <input
    class="css-awii4u"
    color="danger"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox > should render a hint color 1`] = `
<div>
  <input
    class="css-1orf451"
    color="hint"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox > should render a info color 1`] = `
<div>
  <input
    class="css-pw046m"
    color="info"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox > should render a success color 1`] = `
<div>
  <input
    class="css-kf7z38"
    color="success"
    type="checkbox"
  />
</div>
`;

exports[`Checkbox > should render a warning color 1`] = `
<div>
  <input
    class="css-4fxcy0"
    color="warning"
    type="checkbox"
  />
</div>
`;
